Fixing some spacing errors and modifying the size

--- a/Simple-Search/css/style.css
+++ b/Simple-Search/css/style.css
@@ -21,15 +21,16 @@ body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-align: center;
   padding: 0 30px;
+  font-size: 1.5rem;
 }
 
 #search__bar {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   background-color: white;
   border: none;
-  border-radius: 6px;
+  border-radius: 8px;
   padding: 6px;
   outline: none;
   box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.25);
@@ -39,6 +40,8 @@ form #search__bar input {
   border: none;
   outline: none;
   width: 100%;
+  height: 30px;
+  font-size: 1rem;
 }
 
 form #search__bar button {
@@ -49,6 +52,10 @@ form #search__bar button {
 
 form #search__bar button:hover {
   cursor: pointer;
+}
+
+form #search__bar button i {
+  font-size: 1rem;
 }
 
 @media screen and (max-width: 449px) {
